[JBAS-9340] Separate the HTTP server management from the context handlers.
Also the introduction of a common Constants interface and a filter for future contexts that require URLs to contain a trailing slash.